2008-09-14  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.schema: disable show_icon by default.

2008-09-13  Akira TAGOH  <tagoh@redhat.com>

	* tests/testcases/Makefile.am (dist-hook): support older automake.

	* Makefile.am (ACLOCAL_AMFLAGS): Fix an error on aclocal.

	* backends/xim/loopback.c (xim_loopback_real_xim_get_ic_values):
	deal with NESTEDLIST properly.
	(xim_loopback_real_xim_forward_event): reset modifiers state and
	keycode if the sequence is on the way.

	* backends/xim/loopback.c (xim_loopback_real_xim_close): Fix a build
	error on 32bit arch with gcc-4.1.3.
	(xim_loopback_real_xim_get_im_values): likewise.
	(xim_loopback_real_xim_create_ic): likewise.
	(xim_loopback_real_xim_set_ic_values): likewise.
	(xim_loopback_real_xim_get_ic_values): likewise.
	(xim_loopback_real_xim_forward_event): likewise.
	(xim_loopback_real_xim_encoding_negotiation): Use COMPOUND_TEXT anyway.
	(xim_loopback_real_xim_create_ic): Fix a typo for event mask.
	(xim_loopback_real_xim_forward_event): convert the string to
	COMPOUND_TEXT.

	* backends/xim/compose.c (compose_parse): convert data to UTF-8.
	(compose_parse): Fix a build error on 32bit arch with gcc-4.1.3.

	* autogen.sh: Fix an error on aclocal.

	X11's compose data support. (Issue#15)
	
	* backends/xim/loopback.c (xim_loopback_ic_new): new.
	(xim_loopback_ic_free): new.
	(xim_loopback_connection_real_finalize): new.
	(xim_loopback_connection_class_init): new.
	(xim_loopback_connection_init): new.
	(xim_loopback_connection_find_icid): new.
	(xim_loopback_real_xim_open): read compose data.
	(xim_loopback_real_xim_create_ic): create input-context.
	(xim_loopback_real_xim_set_ic_values): new.
	(xim_loopback_real_xim_get_ic_values): new.
	(xim_loopback_real_xim_set_ic_focus): new.
	(xim_loopback_real_xim_unset_ic_focus): new.
	(xim_loopback_real_xim_forward_event): new.
	(xim_loopback_real_xim_sync_reply): new.

	* backends/xim/compose.[ch]: new.

2008-09-12  Akira TAGOH  <tagoh@redhat.com>
