@@ -1,6 +1,6 @@
 XIM=none
 XIM_PROGRAM=
 XIM_ARGS=
-GTK_IM_MODULE=
+GTK_IM_MODULE=gtk-im-context-simple
 QT_IM_MODULE=
 IMSETTINGS_IGNORE_ME=yes
